--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,16 +6,14 @@ $path: '/spotlight/stylesheets/';
 @import
   // govuk_frontend_toolkit
   '_colours',
-  '_conditionals',
-  '_css3',
+  '_grid_layout',
   '_typography',
   'design-patterns/_buttons',
 
+  // Spotlight
   'colours',
   'typography',
-  'change',
-
-  // Main
+  'change', // Green/red increase/decrease arrows
   'common/layout',
   'common/columns',
   'common/raw',
