Switch from $govuk-page-width to $site-width
$govuk-page-width was project specific
$site-width is set in govuk_frontend_toolkit > _grid_layout

--- a/styles/common/breadcrumbs.scss
+++ b/styles/common/breadcrumbs.scss
@@ -10,11 +10,11 @@
   }
 
   @include ie(6) {
-    width: $govuk-page-width;
+    width: $site-width;
   }
 
   ol {
-    max-width: $govuk-page-width;
+    max-width: $site-width;
     margin: 0 30px;
     padding: 0.75em 0;
 
