--- a/styles/common/raw.scss
+++ b/styles/common/raw.scss
@@ -26,7 +26,7 @@ body.raw {
 
     .visualisation {
       float: left;
-      width: $govuk-page-width;
+      width: $site-width;
 
       .table-toggle {
         display: none;
