Add govuk_elements tables scss

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -45,7 +45,8 @@ $path: '/spotlight/stylesheets/';
   'common/list',
   'common/kpi',
   'common/user_satisfaction',
-  'common/table',
+  // 'common/table',
+  'elements/tables', // Try govuk_elements table styling
   'common/bar_chart_with_number',
   'common/filteredlist',
 
